--- a/css/master.css
+++ b/css/master.css
@@ -66,9 +66,11 @@
 		section.content nav {
 				flex: 1;
 				background: red;
-				height: 100vh;
 				min-width: 230px;
 				background-color: #2f4050;
+				position: fixed;
+				z-index: 9999;
+				height: 100%;
 		}
 
 
@@ -115,6 +117,7 @@
 
 		section.content main {
 				flex: 6;
+				margin-left: 230px;
 		}
 
 		section.content main header {
@@ -141,7 +144,7 @@
 
 		div.users {
 			width: 80%;
-			max-width: 1200px;
+			max-width: 1300px;
 			min-width: 400px;
 			margin: auto;
 			overflow-x: auto;
